--- a/public/bower.json
+++ b/public/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "tokensDApp",
+  "name": "lisk-tokens-dapp",
   "dependencies": {
     "ng-table": "~0.8.3",
     "angular-animate": "~1.4.8",
