--- a/public/package.json
+++ b/public/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tokenDApp",
-  "version": "0.0.1",
+  "name": "lisk-tokens-dapp",
+  "version": "0.0.0",
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-concat": "^0.5.1",
